sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet_Allowance__c/Casuals_Timesheet_Allowance__c.object-meta.xml
<CustomObject>
    <label>Casuals Timesheet Allowance</label>
    <nameField>
        <displayFormat>CAS-TIM-ALL-{000000}</displayFormat>
        <label>Casuals Timesheet Allowance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Casuals Timesheet Allowances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>