sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet_Allowance__c/fields/Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Type__c</fullName>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Othe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>