sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet_Allowance__c/fields/Casuals_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Casuals_Timesheet__c</fullName>
    <label>Casuals Timesheet</label>
    <referenceTo>Casuals_Timesheet__c</referenceTo>
    <relationshipLabel>Casuals Timesheet Allowances</relationshipLabel>
    <relationshipName>Casuals_Timesheet_Allowances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>