sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet_Allowance__c/validationRules/Quantity_not_less_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_not_less_than_1</fullName>
    <active>true</active>
    <description>Quantity should not be less than 1</description>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity should not be less than 1</errorMessage>
</ValidationRule>