sfSandBoxCode/force-app/main/default/objects/Casuals_Timesheet_Allowance__c/validationRules/Quantity_not_more_than_1_for_per_job.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_not_more_than_1_for_per_job</fullName>
    <active>true</active>
    <description>Quantity should not be more than 1 if  rate Units is per job</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Rate_Units__c ,&quot;Per Job&quot;),
   Quantity__c &gt;1
)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity should not be more than 1 if  rate Units is per job</errorMessage>
</ValidationRule>